Fix dat-gui z-index

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ canvas { display: block; width: 100%; height: 100% }
     font-family: sans-serif;
     color: aliceblue;
     position: absolute;
-    top: 10px;
+    top: 20px;
     left: 10px;
-    z-index: 100;
+    z-index: 2;
     display:block;
 }
 
@@ -18,7 +18,7 @@ canvas { display: block; width: 100%; height: 100% }
     font-family: sans-serif;
     font-size: 12px;
     color: aliceblue;
-    z-index: 100;
+    z-index: 2;
 }
 
 #c-label {
@@ -27,7 +27,7 @@ canvas { display: block; width: 100%; height: 100% }
     font-family: sans-serif;
     font-size: 12px;
     color: yellow;
-    z-index: 100;
+    z-index: 2;
 }
 
 #a-label {
@@ -36,7 +36,7 @@ canvas { display: block; width: 100%; height: 100% }
     font-family: sans-serif;
     font-size: 12px;
     color: cyan;
-    z-index: 100;
+    z-index: 2;
 }
 
 #b-label, #b-comma-label {
@@ -45,7 +45,7 @@ canvas { display: block; width: 100%; height: 100% }
     font-family: sans-serif;
     font-size: 12px;
     color: magenta;
-    z-index: 100;
+    z-index: 2;
 }
 
 #table-of-angles {
@@ -55,10 +55,11 @@ canvas { display: block; width: 100%; height: 100% }
     font-size: 12px;
     color: aliceblue;
     z-index: 100;
-    top: 250px;   
+    top: 260px;   
     left: 10px;
     border: 1px solid aliceblue; 
     border-collapse: collapse;
+    z-index: 2;
 }
 
 #table-of-angles td {
@@ -66,3 +67,10 @@ canvas { display: block; width: 100%; height: 100% }
     text-align: center;
     border: 1px solid aliceblue;  
 }
+
+#dat-gui-container {
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    z-index: 10;
+  }
